--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
      </p>
     <hr>
     <br>
-    <a href="parte2.html" style="color: rgb(17, 17, 18);" > Clique aqui</a>
+    <div>
+
+      <a href="parte2.html"> 
+        
+        <link rel="stylesheet" href="borda.css">
+        <button> Clique aqui</button>
+      </a>
+    </div>
+    
   </body>
   </html>
   
