--- a/parte2.html
+++ b/parte2.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animes</title>
+    <link rel="stylesheet" href="botao.css" />
+    <link rel="stylesheet" href="baortbot.css" />
   </head>
   <body>
-    <link rel="stylesheet" href="botao.css" />
-    <div>
-      <img src="imagens/91g9GmfvT6L.jpg" height=" 230px" width="280px" />
+    <div class="caracteres">
+      <img src="imagens/91g9GmfvT6L.jpg" height="290px" width="313px" />
       <p>
         Acompanha Yoichi Isagi em um projeto implacável para criar o melhor
         atacante do mundo. Em um sistema onde apenas o mais egoísta sobrevive,
         ele enfrenta desafios intensos para se tornar o craque definitivo.
       </p>
       <a href="informacao1.html">
-        <link rel="stylesheet" href="baortbot.css" />
-        <button>Informações</button></a
-      >
+        <button class="botao">Informações</button>
+      </a>
     </div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+
+    <div class="but">
+      <a href="informacao1.html">
+        <button class="botao">Informações</button>
+      </a>
+    </div>
   </body>
 </html>
