--- a/parte2.html
+++ b/parte2.html
@@ -8,22 +8,17 @@
     <link rel="stylesheet" href="baortbot.css" />
   </head>
   <body>
+    <a href="inicio.html">
     <div class="caracteres">
-      <img src="imagens/91g9GmfvT6L.jpg" height="290px" width="313px" />
-      <p>
-        Acompanha Yoichi Isagi em um projeto implacável para criar o melhor
-        atacante do mundo. Em um sistema onde apenas o mais egoísta sobrevive,
-        ele enfrenta desafios intensos para se tornar o craque definitivo.
-      </p>
-      <a href="informacao1.html">
-        <button class="botao">Informações</button>
+        <img src="imagens/91g9GmfvT6L.jpg" height="592px" width="435px" />
+        </a>
       </a>
-    </div>
-
-    <div class="but">
-      <a href="informacao1.html">
-        <button class="botao">Informações</button>
-      </a>
+      
+      <div class="setas">
+        <img src="imagens/seta-direita.png" height="62px" width="65px" >
+        <img src="imagens/seta-esquerda.png" height="62px" width="65px">
+      </div>
+      
     </div>
   </body>
 </html>
