--- a/inicio.html
+++ b/inicio.html
@@ -18,15 +18,17 @@
       <div class="logo">Anime<span style="color: #ff4081">Finder</span></div>
       <nav>
         <ul>
-          <li><a href="#">Início</a></li>
-          <li><a href="#">Recomendações</a></li>
-          <li><a href="#">Gêneros</a></li>
+          <li><a href="inicio.html">Início</a></li>
+          <li><a href="parte2.html">Recomendações</a></li>
           <li><a href="#">Popular</a></li>
-          <li><a href="#">Sobre</a></li>
+          <li><a href="informacao1.html">Sobre</a></li>
         </ul>
       </nav>
       <div class="auth">
-        <button class="login-btn">Login / Cadastro</button>
+        <a href="login.html">
+        <button class="login-btn">Login / Cadastro</button></a>
+
+
       </div>
     </header>
 
